--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,17 @@
 {
   "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "Yahtzee Online",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "yahtzee-logo.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "yahtzee-logo.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "2484x600"
     },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
   ],
   "start_url": ".",
   "display": "standalone",
